--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
         "roave/security-advisories": "dev-master",
         "symfony/debug-pack": "*",
         "symfony/profiler-pack": "*",
