--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,12 +5,15 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     download_directory: '../public/downloads'
+    admin_email: admin@admin.com
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $globalParam: 'global param to be used by all services defined in this file'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -30,3 +33,8 @@ services:
     App\Controller\DefaultController:
         bind:
             $logger: '@monolog.logger'
+
+    App\Services\MyService:
+        arguments:
+            $param1: 'some param'
+            $adminEmail: '%admin_email%'
