--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,6 +39,6 @@ services:
             my: '@App\Services\MySecondService'
             logger: '@monolog.logger'
 
-    App\Listeners\VideoCreatedListener:
-      tags:
-        - {name: kernel.event_listener, event: video.created.event, method: onVideoCreatedEvent}
+#    App\Listeners\VideoCreatedListener:
+#      tags:
+#        - {name: kernel.event_listener, event: video.created.event, method: onVideoCreatedEvent}
