--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,8 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    download_directory: '../public/downloads'
+    download_directory: '%kernel.project_dir%/public/downloads'
     admin_email: admin@admin.com
+    videos_directory: '%kernel.project_dir%/public/uploads/videos'
 
 services:
     # default configuration for services in *this* file
