--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "roave/security-advisories": "dev-master",
         "sensiolabs/security-checker": "^6.0",
         "symfony/debug-pack": "*",
+        "symfony/phpunit-bridge": "^4.3",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*",
         "symfony/web-profiler-bundle": "4.3.*",
